documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.CS


        [DllImport("C41W32.DLL", EntryPoint = "_C41_AsciiFrom@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_AsciiFrom(ref string asciistr, Int32 radixval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_AsciiTo@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_AsciiTo(UInt32 value, ref string asciistr, Int32 numbits, Int32 radixval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDGetData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BCDGetData(UInt32 msg, UInt16 msb, UInt16 lsb);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDGetMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BCDGetMant(UInt32 msg, UInt16 sigdig);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDGetSign@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_BCDGetSign(UInt32 msg);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDGetSSM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_BCDGetSSM(UInt32 msg);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDGetVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_BCDGetVal(ref string buf, UInt32 msg, UInt16 sigdig, ref string resolstr);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDPutData@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BCDPutData(UInt32 msg, UInt32 value, UInt16 msb, UInt16 lsb);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDPutMant@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BCDPutMant(UInt32 msg, UInt32 value, UInt16 sigdig, UInt16 sign);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDPutSign@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BCDPutSign(UInt32 msg, UInt16 sign);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDPutSSM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BCDPutSSM(UInt32 msg, UInt16 value);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BCDPutVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BCDPutVal(ref string buf, UInt32 msg, UInt16 sigdig, ref string resolstr);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRGetData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BNRGetData(UInt32 msg, UInt16 msb, UInt16 lsb);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRGetMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BNRGetMant(UInt32 msg, UInt16 sigbit);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRGetSign@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_BNRGetSign(UInt32 msg);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRGetSSM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_BNRGetSSM(UInt32 msg);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRGetVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_BNRGetVal(ref string buf, UInt32 msg, UInt16 sigbit, ref string resolstr);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRPutData@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BNRPutData(UInt32 msg, UInt32 value, UInt16 msb, UInt16 lsb);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRPutMant@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BNRPutMant(UInt32 msg, UInt32 value, UInt16 sigbit, UInt16 twos);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRPutSign@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BNRPutSign(UInt32 msg, UInt16 twos);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRPutSSM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BNRPutSSM(UInt32 msg, UInt16 value);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_BNRPutVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_BNRPutVal(ref string buf, UInt32 msg, UInt16 sigbit, ref string resolstr);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ChCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ChCheck(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ChClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ChClear(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ChConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ChConfig(UInt32 configval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ChPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_ChPause(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ChResume@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_ChResume(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CloseAll@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CloseAll();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CloseCard@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CloseCard(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ExtRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ExtRd(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ExtWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_ExtWr(Int32 extflag, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FilterDefault@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FilterDefault(Int32 msgnum, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FilterSet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_FilterSet(Int32 labelval, Int32 sdimask, Int32 msgnum, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldGetData@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_FldGetData(UInt32 msgval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldGetLabel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_FldGetLabel(UInt32 msgval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldGetParity@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_FldGetParity(UInt32 msgval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldGetSDI@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_FldGetSDI(UInt32 msgval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldGetValue@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_FldGetValue(UInt32 msgval, UInt16 startbit, UInt16 endbit);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldPutData@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_FldPutData(UInt32 msgval, UInt32 data);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldPutLabel@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_FldPutLabel(UInt32 msgval, UInt16 label);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldPutSDI@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_FldPutSDI(UInt32 msgval, UInt16 sdi);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_FldPutValue@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_FldPutValue(UInt32 msgval, UInt32 dataval, UInt16 startbit, UInt16 endbit);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_IntDin@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_IntDin(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_IntRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_IntRd(ref UInt16 typevalval, ref UInt16 infoval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ListMakeRcv@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ListMakeRcv(UInt16 count, Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ListMakeXmt@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ListMakeXmt(UInt16 count, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ListRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ListRd(ref UInt32 msgval, UInt16 listaddr, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ListStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ListStatus(UInt16 listaddr, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ListWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ListWr(UInt32 msgval, UInt16 listaddr, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MemPeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_MemPeek(UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MemPoke@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MemPoke(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgArincRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_MsgArincRd(Int32 msgnum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_MsgArincWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_MsgArincWr(UInt32 msgval, Int32 msgnum, UInt32 handleval);
